--- a/ng-auction/src/app/app.component.html
+++ b/ng-auction/src/app/app.component.html
@@ -1,20 +1,41 @@
-<mat-toolbar class="toolbar">
-  <button mat-icon-button class="toolbar__icon-button">
-    <mat-icon>menu</mat-icon>
-  </button>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <nga-search-form (search)="sidenav.close()"></nga-search-form>
+  </mat-sidenav>
 
-  <div class="toolbar__logo-title-group" fxLayout fxLayoutAlign="center center">
-    <a routerLink="/" fxLayout>
-      <img class="toolbar__logo" src="/assets/logo.svg" alt="NgAuction Logo">
-    </a>
-    <a routerLink="/" class="toolbar__title">NgAuction</a>
-  </div>
+  <mat-toolbar class="toolbar">
+    <button
+      mat-icon-button
+      class="toolbar__icon-button"
+      (click)="sidenav.toggle()"
+    >
+      <mat-icon>search</mat-icon>
+    </button>
 
-  <div fxFlex></div>
+    <div
+      class="toolbar__logo-title-group"
+      fxLayout
+      fxLayoutAlign="center center"
+    >
+      <a routerLink="/" fxLayout>
+        <img
+          class="toolbar__logo"
+          src="/assets/logo.svg"
+          alt="NgAuction Logo"
+        />
+      </a>
+      <a routerLink="/" class="toolbar__title">NgAuction</a>
+    </div>
 
-  <button mat-icon-button class="toolbar__icon-button toolbar__shopping-cart-button">
-    <mat-icon>shopping_cart</mat-icon>
-  </button>
-</mat-toolbar>
+    <div fxFlex></div>
 
-<router-outlet></router-outlet>
+    <button
+      mat-icon-button
+      class="toolbar__icon-button toolbar__shopping-cart-button"
+    >
+      <mat-icon>shopping_cart</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <router-outlet></router-outlet>
+</mat-sidenav-container>
