--- a/ng-auction/src/app/home/search-results/search-results.component.html
+++ b/ng-auction/src/app/home/search-results/search-results.component.html
@@ -1,3 +1,3 @@
 <div class="grid-list-container">
-  <!-- nga-product-grid [products]="products$ | async"></nga-product-grid -->
+  <nga-product-grid [products]="products$ | async"></nga-product-grid>
 </div>
