--- a/ng-auction/src/app/app.component.html
+++ b/ng-auction/src/app/app.component.html
@@ -1,41 +1,43 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav>
+  <mat-sidenav #sidenav mode="side">
     <nga-search-form (search)="sidenav.close()"></nga-search-form>
   </mat-sidenav>
 
-  <mat-toolbar class="toolbar">
-    <button
-      mat-icon-button
-      class="toolbar__icon-button"
-      (click)="sidenav.toggle()"
-    >
-      <mat-icon>search</mat-icon>
-    </button>
+  <mat-sidenav-content>
+    <mat-toolbar class="toolbar">
+      <button
+        mat-icon-button
+        class="toolbar__icon-button"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon>search</mat-icon>
+      </button>
 
-    <div
-      class="toolbar__logo-title-group"
-      fxLayout
-      fxLayoutAlign="center center"
-    >
-      <a routerLink="/" fxLayout>
-        <img
-          class="toolbar__logo"
-          src="/assets/logo.svg"
-          alt="NgAuction Logo"
-        />
-      </a>
-      <a routerLink="/" class="toolbar__title">NgAuction</a>
-    </div>
+      <div
+        class="toolbar__logo-title-group"
+        fxLayout
+        fxLayoutAlign="center center"
+      >
+        <a routerLink="/" fxLayout>
+          <img
+            class="toolbar__logo"
+            src="/assets/logo.svg"
+            alt="NgAuction Logo"
+          />
+        </a>
+        <a routerLink="/" class="toolbar__title">NgAuction</a>
+      </div>
 
-    <div fxFlex></div>
+      <div fxFlex></div>
 
-    <button
-      mat-icon-button
-      class="toolbar__icon-button toolbar__shopping-cart-button"
-    >
-      <mat-icon>shopping_cart</mat-icon>
-    </button>
-  </mat-toolbar>
+      <button
+        mat-icon-button
+        class="toolbar__icon-button toolbar__shopping-cart-button"
+      >
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+    </mat-toolbar>
 
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 </mat-sidenav-container>
