--- a/ng-auction/src/app/shared/components/search-form/search-form.component.html
+++ b/ng-auction/src/app/shared/components/search-form/search-form.component.html
@@ -9,10 +9,10 @@
     <mat-error>Cannot be less than 0</mat-error>
   </mat-form-field>
   <mat-form-field class="form__field">
-    <input matInput type="number" placeholder="Max price" formControlName="maxPrice">
-    <mat-error>Cannot be less than 0</mat-error>
+    <input matInput type="number" placeholder="Max price" formControlName="maxPrice" [errorStateMatcher]="matcher">
+    <mat-error *ngIf="searchForm.controls['maxPrice'].hasError('min')">Cannot be less than 0</mat-error>
     <mat-error *ngIf="searchForm.controls['maxPrice'].hasError('max')">Cannot be more than 10000</mat-error>
-    <mat-error *ngIf="searchForm.controls['maxPrice'].hasError('minLessThanMax')">Should be larger than min price</mat-error>
+    <mat-error *ngIf="searchForm.hasError('minLessThanMax')">Should be larger than min price</mat-error>
   </mat-form-field>
   <button class="form__submit" color="primary" mat-raised-button>SEARCH</button>
 </form>
